creating parquet files before Testing